neuvue_project/workspace/static/css/workspace.css
/* FONTS & COLORS */

:root {
  /* PRIMARY COLORS #000e22;*/
  --background: #120c1a;
  --header-background: #312244;
  --navbar-text: #e6f1ff;
  --primary-accent: #e6f1ff;
  --primary-accent-activated: #8892b0;
  --secondary-accent: #077179;
  --secondary-accent-activated: #00a2a5;
  --next-accent: #118d4f;
  --next-accent-activated: #099c52;
  --flag-accent: #b14646;
  --flag-accent-activated: #cf4b4b;
  --pause-accent: #9c9999;
  --pause-accent-activated: #706d6d;
  --incomplete-color:#b2eebf;
  --incomplete-color-actived:#8fe2a1;
  --complete-color:#96a5d4;
  --complete-color-actived:#738fe6;
  --progress: #96a5d4;

  /* TRANSPARENT COLORS */
  --transparent-background: #120e1479;
  --table-background:#120e149a;
  --transparent-task: #0a192fce;
  --transparent-shadow:#00000033;
  --transparent-hover:#e6f1ff50;

  /* FONTS */
  --header-font: "Lato", sans-serif;
  --body-font: "Lato", sans-serif;
  --monospace-font: "Lato", sans-serif;
  --code-font:"Fira Mono", serif;
}

/* Media */ 
ul li {
  padding: 0vh 0.5vw;
  left:0vw;
}
.basic {
  background-image: url('/static/images/neuron_background_sketch-01-min.png'); 
  background-size: cover;
}

.basic.workspace {
  width: 100%;
  min-height: 94vh;
  overflow: hidden;
}

.basic.tasks {
  width: 100%;
  min-height: 100vh;
}

.intro {
  background-image: url('/static/images/xrayneuron01-min.png'); 
  background-size: cover;
  background-repeat: no-repeat;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  min-height: 100vh;
  min-width: 100vw;
}

/* Separates left column with NG window, text, and buttons from right column: sidebar */

.left {
border-radius: 12px;
background-color: transparent;
flex-grow: 6;
order: 1;
height: 95%;
margin-top: 0%;
margin-left: 1%;
display: flex;
top:0;
align-items: center;
flex-direction: column;
}

.right {
background-color: transparent;
flex-grow: 1;
order: 2;
height: 95%;
width: 15%;
margin-right: 1%;
overflow: auto;
overflow-x: hidden;
}

/* Additional container for NG window, text, and buttons to arrange column */
.leftFormatting {
  border-radius: 12px;
  background-color: transparent;
  width: 75%;
  top:-1%;
  height: 95% !important;
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 1%;
  transition: 0.3s;
}


/* Button class -- no longer used in html regions */
.buttonBox {
  background-color: transparent;
  width: 30%;
  display: flex;
  flex-direction: column;
}

.buttonBox.end {
  margin-bottom: 2%;
  margin-right: 2%;
  position: relative;
  bottom: 0px;
  right: 0px;
  clear: both;
  padding-top:20px;
}


/* NG container */
/* width and height defined in workspace.html*/
.neuroGlancer {
  box-shadow: 0 4px 8px 0 var(--transparent-shadow);
  border-radius: 8px;
  border: 1px solid var(--background);
  margin-top: 1.5%;
  margin-bottom: 1%;
  width: 95%;
  height: 83vh;
  order: 1;
}

/* formats the Task ID, Segmentation ID, and Pychunked graph container */
.topBar {
  font-family: var(--body-font);
  color: var(--primary-accent-activated);
  background-color: transparent;
  height: 2% !important;
  width: 95%;
  display: flex;
  flex-direction: row;
  order: 0;
  top:0;
  vertical-align: top;
  left:0;
}

.textBin {
  height:100%;
  overflow: hidden;
  display: block;
}

.textBin.left {
  min-width: 10%;
  max-width: 20%;
  float: left;
  order:0;
  text-align: left !important;
}
.textBin.mid {
  min-width: 10%;
  max-width: 20%;
  float: left;
  text-align: center;
  order:1;
}
.textBin.right {
  width: 60%;
  float: right;
  text-align: right;

}

/* button container below NG */
.bottomBar {
  flex-grow: 1;
  order: 2;
  padding:1%;
  background-color: transparent;
  height: 5% !important;
  width: 95%;
  margin-bottom: 1%;
  display: flex;
  flex-direction: row;
  align-items: center;
  order: 2;
}

/* buttons used in bottom container */
.mainButton {
  font-family: var(--monospace-font);
  background-color: var(--secondary-accent);
  border-radius: 8px;
  color: var(--background);
  width: 100%;
  padding: 0.25vh 0.25vh;
  margin: 0vh 0.25vh;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  font-size: 1.3vh;
}

.mainButton:hover{
border: 3px solid var(--secondary-accent);
background: var(--secondary-accent);
color: var(--primary-accent);
}

.mainButton.flag{
  background-color: var(--flag-accent);
  color: var(--background);
}

.mainButton.flag:hover{
border: 3px solid var(--flag-accent);
background: var(--flag-accent);
color: var(--primary-accent);
}

.mainButton.pause{
  background-color: var(--pause-accent);
  color: var(--background);
}

.mainButton.pause:hover{
border: 3px solid var(--pause-accent);
background: var(--pause-accent);
color: var(--primary-accent);
}

.mainButton.submit{
background-color: var(--next-accent);
color: var(--background);
}

.mainButton.submit:hover{
border: 3px solid var(--next-accent);
background-color: var(--next-accent);
color: var(--primary-accent);
}

.mainButton.submit.duo{
  width: 40%;
  float: left;
  margin: 1vh 1vw;
}

.mainButton.submit.duo:hover{
  
}

  .mainButton.flag.duo{
    width: 40%;
    float: right;
    margin: 1vh 1vw;
  }
  
  .mainButton.flag.duo:hover{
    
  }

.copyButton{
  background-color: var(--secondary-accent);
  display: flex;
}

.copyButton:hover{
  border: 2px solid var(--pause-accent);
  background: var(--pause-accent);
  color: var(--primary-accent);
  }

.instructions {
  font-family: var(--monospace-font);
  background-color: var(--transparent-background);
  border-radius: 8px;
  border: 1.5px solid var(--secondary-accent);
  color: var(--primary-accent);
  margin: 0 0 10 10px;
  margin-top: 2%;
  margin-bottom: 2%;
  padding: 5px 5px;
  text-align: left;
  text-decoration: none;
  display: inline-block;
  width: 90%;
  font-size: 1.2vh;
}

.index-title-container {
display: flex;
flex-direction: column;
margin-left: 100;
width: 50%;
position: absolute;
top: 42%;
}
/* ... */

